tests/preproc_samples/valid/label_converting/code.mas
%m m1 {
.l:
    a @.l;
}
# =>
# m1~l:
#   a @m1~l;

%m m2 {
.l:
    b @.l;
    m1;
}
# =>
# m2~l:
#    b @m2~l;
# m2~m1~l~0:
#    a @m2~m1~l~0;

%m m3 {
.l:
    c @.l;
    m2;
}
# =>
# m3~l:
#    c @m3~l;
# m3~m2~l~1:
#    b @m3~m2~l~1;
# m3~m2~m1~l~0~1:
#    a @m3~m2~m1~l~0~1;

%i i1 {
l:
    m1;
.l:
    m2;
    m3;
}

%i i2 {
.l:
    m3;
}