tests/preproc_samples/invalid/special_symbols_in_name_warning.mas
%m m~0 {
.l~0:
    a;
}

%m m~1 {
.l~1:
    a;
    m~0;
}

%i i~ {
    !nop;
}

%i i(a~a, b~b) {
.l~1:
    m~1;
    a;
}
